Standardized style of buttons
Of course, this can be changed. I just thought it'd be good if all of them matched.

--- a/style.css
+++ b/style.css
@@ -62,18 +62,6 @@ input, button {
   width: 100%;
 }
 
-button {
-  padding: 10px;
-  border: 1px solid;
-  box-shadow: 0 5px #565656;
-  background:white;
-  outline: none;
-}
-
-button:hover {
-  cursor: pointer;
-}
-
 .label {
   font-weight: bold;
   text-transform: uppercase;
@@ -90,10 +78,6 @@ button:hover {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 10px;
-}
-
-.tempo {
-  margin-left: 3px;
 }
 
 .bar {
@@ -121,41 +105,52 @@ button:hover {
   padding-right: 0px !important;
 }
 
+.toggle {
+  border-width: 2px;
+  border-style: solid;
+  border-color: #a8a8a8;
+  width: 100%;
+  text-align: center;
+}
+
 .section {
   padding: 10px;
   display: inline-block;
   border-color: #a8a8a8;
   border-width: 2px;
 }
+.section:not(.button):not(.counter) {
+  padding: 8px;
+}
+
+.button {
+  display: inline-block;
+  background: #e8e8e8;
+  color: #565656;
+  font-weight: bold;
+  cursor: pointer;
+}
+.button:hover {
+  background: #d8d8d8;
+}
+.button:active {
+  background: #c8c8c8;
+}
+.button::selection {
+  background: none;
+}
+
+.tap {
+  border-right-style: solid;
+}
 
 .remove-bar {
   border-right-style: solid;
-  display: inline-block;
   color: #ff0000;
-  font-weight: bold;
-  cursor: pointer;
-  height: 43px;
-}
-.remove-bar:hover {
-  background: #d8d8d8;
-}
-.remove-bar:active {
-  background: #c8c8c8;
 }
 
 .add-bar {
   border-left-style: solid;
-  display: inline-block;
-  color: #565656;
-  font-weight: bold;
-  cursor: pointer;
-  height: 43px;
-}
-.add-bar:hover {
-  background: #d8d8d8;
-}
-.add-bar:active {
-  background: #c8c8c8;
 }
 
 .disabled {
@@ -167,11 +162,6 @@ button:hover {
 }
 .disabled:active {
   background: #e8e8e8;
-}
-
-.button {
-  padding: 10px;
-  margin-bottom: 10px;
 }
 
 .wrapper {
@@ -223,25 +213,25 @@ input[type=range]:focus {
 
 input[type=range]::-webkit-slider-runnable-track {
   background: #e8e8e8;
+  margin-bottom: -3px;
   cursor: pointer;
   height: 10px;
   width: 100%;
 }
 
 input[type=range]::-webkit-slider-thumb {
-  background: #fff;
-  border: 1px solid #000;
-  border-radius: 0;
-  box-shadow: 0 5px #565656;
-  cursor: pointer;
-  height: 36px;
-  margin-top: -14px;
   -webkit-appearance: none;
+  background: #e8e8e8;
+  border: 2px solid #a8a8a8;
+  border-radius: 0;
+  cursor: pointer;
+  height: 40px;
+  margin-top: -15px;
   width: 16px;
 }
 
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #565656;
+  background: #c8c8c8;
 }
 
 input[type=range]::-moz-range-track {
@@ -252,12 +242,11 @@ input[type=range]::-moz-range-track {
 }
 
 input[type=range]::-moz-range-thumb {
-  background: #fff;
-  border: 1px solid #000;
+  background: #e8e8e8;
+  border: 2px solid #a8a8a8;
   border-radius: 0;
-  box-shadow: 0 5px #565656;
   cursor: pointer;
-  height: 36px;
+  height: 40px;
   width: 16px;
 }
 
@@ -280,19 +269,18 @@ input[type=range]::-ms-fill-upper {
 }
 
 input[type=range]::-ms-thumb {
-  background: #fff;
-  border: 1px solid #000;
+  background: #e8e8e8;
+  border: 2px solid #a8a8a8;
   border-radius: 0;
-  box-shadow: 0 5px #565656;
   cursor: pointer;
-  height: 36px;
+  height: 40px;
   width: 16px;
 }
 
 input[type=range]:focus::-ms-fill-lower {
-  background: #565656;
+  background: #c8c8c8;
 }
 
 input[type=range]:focus::-ms-fill-upper {
-  background: #565656;
+  background: #c8c8c8;
 }
