--- a/style.css
+++ b/style.css
@@ -177,13 +177,17 @@ input, button {
 }
 
 .counter {
-  background: #565656;
-  color: white;
+  //background: #565656;
+  background: white;
+  color: black;
   border-left-style: solid;
   border-width: 2px;
   font-weight: bold;
   padding-left: 14px;
   padding-right: 15px;
+  box-shadow: 3px 3px 3px 3px #d5d5d5;
+  text-shadow: 0 0 2px black;
+  font-size: 2.5rem
 }
 
 .hidden {
